Table "Bible" {
  "VerseId" INTEGER [pk, not null]
  "BookNumber" INTEGER [unique]
  "ChapterNumber" INTEGER [unique]
  "VerseNumber" INTEGER [unique]
  "IsOmitted" BOOLEAN
}

Table "Language" {
  "LanguageCode" VARCHAR [pk, not null]
  "LanguageMepsSymbol" VARCHAR [unique, not null]
  "LanguageName" VARCHAR
  "LanguageVernacular" VARCHAR
  "RsConfigSymbol" VARCHAR
  "LibrarySymbol" VARCHAR
  "IsSignLanguage" BOOLEAN
  "LanguageScript" VARCHAR
  "IsRTL" BOOLEAN
  "HasWebContent" BOOLEAN
  "IsCounted" BOOLEAN
}

Table "Edition" {
  "EditionId" INTEGER [pk, not null]
  "LanguageCode" INTEGER [unique, not null]
  "Name" VARCHAR
  "SymbolEdition" VARCHAR [unique]
  "URL" VARCHAR
}

Table "User" {
  "UserId" INTEGER [pk, not null]
  "TelegramUserId" INTEGER [unique, not null]
  "FirstName" VARCHAR
  "LastName" VARCHAR
  "UserName" VARCHAR
  "IsPremium" BOOLEAN
  "SignLanguageCode" INTEGER
  "SignLanguageCode2" INTEGER
  "SignLanguageCode3" INTEGER
  "BotLanguageCode" INTEGER
  "OverlayLanguageCode" INTEGER
  "SignLanguageName" VARCHAR
  "Status" INTEGER
  "AddedDatetime" DATETIME
  "LastActiveDatetime" DATETIME
  "Delogo" BOOLEAN
}

Table "Book" {
  "BookId" INTEGER [pk, not null]
  "EditionId" INTEGER [unique, not null]
  "BookNumber" INTEGER [unique]
  "StandardName" VARCHAR
  "StandardAbbreviation" VARCHAR
  "OfficialAbbreviation" VARCHAR
  "StandardSingularBookName" VARCHAR
  "StandardSingularAbbreviation" VARCHAR
  "OfficialSingularAbbreviation" VARCHAR
  "StandardPluralBookName" VARCHAR
  "StandardPluralAbbreviation" VARCHAR
  "OfficialPluralAbbreviation" VARCHAR
  "RefreshedOnDate" DATETIME
  "BookDisplayTitle" VARCHAR
  "ChapterDisplayTitle" VARCHAR
}

Table "Chapter" {
  "ChapterId" INTEGER [pk, not null]
  "BookId" INTEGER [unique, not null]
  "ChapterNumber" INTEGER [unique]
  "Checksum" VARCHAR
  "ModifiedDatetime" DATETIME
  "URL" VARCHAR
}

Table "File" {
  "FileId" INTEGER [pk, not null]
  "ChapterId" INTEGER [not null]
  "TelegramFileId" VARCHAR [unique]
  "TelegramFileUniqueId" VARCHAR [unique]
  "FileSize" INTEGER
  "Duration" INTEGER
  "Citation" VARCHAR
  "RawVerseNumbers" VARCHAR
  "CountVerses" INTEGER
  "AddedDatetime" DATETIME
  "OverlayLanguageCode" INTEGER
  "IsDeprecated" BOOLEAN
  "Delogo" BOOLEAN
}

Table "VideoMarker" {
  "VideoMarkerId" INTEGER [pk, not null]
  "ChapterId" INTEGER [not null]
  "VerseId" INTEGER [not null]
  "VerseNumber" INTEGER
  "Label" VARCHAR
  "Duration" VARCHAR
  "StartTime" VARCHAR
  "EndTransitionDuration" VARCHAR
}

Table "File2User" {
  "File2UserId" INTEGER [pk, not null]
  "FileId" INTEGER [not null]
  "UserId" INTEGER [not null]
  "Datetime" DATETIME
}

Ref:"Language"."LanguageCode" < "Edition"."LanguageCode"

Ref:"Language"."LanguageCode" < "User"."SignLanguageCode"

Ref:"Language"."LanguageCode" < "User"."SignLanguageCode2"

Ref:"Language"."LanguageCode" < "User"."SignLanguageCode3"

Ref:"Language"."LanguageCode" < "User"."BotLanguageCode"

Ref:"Language"."LanguageCode" < "User"."OverlayLanguageCode"

Ref:"Edition"."EditionId" < "Book"."EditionId"

Ref:"Book"."BookId" < "Chapter"."BookId"

Ref:"Chapter"."ChapterId" < "File"."ChapterId"

Ref:"Language"."LanguageCode" < "File"."OverlayLanguageCode"

Ref:"Chapter"."ChapterId" < "VideoMarker"."ChapterId"

Ref:"Bible"."VerseId" < "VideoMarker"."VerseId"

Ref:"File"."FileId" < "File2User"."FileId"

Ref:"User"."UserId" < "File2User"."UserId"
